klee/examples/for_test/klee-last/test000001.pc
array model_version[4] : w32 -> w8 = symbolic
array argv2[16] : w32 -> w8 = symbolic
(query [(Eq 1
            (ReadLSB w32 0 model_version))
        (Eq 48 (Read w8 0 argv2))]
       false)
